Styled body and text

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <div class="weather-app">
         <div class="weather-info">
           <h1>Auckland</h1>
-          <h2>Sunday 16:00</h2>
-          <img src="images/syn.svg" alt="sunshine" />
-          <h3>17°C</h3>
-          <h4>Sunny</h4>
-          <h5>Humidity: 66%, Wind: 15km/h</h5>
+          <p>Sunday 16:00</p>
+          <img src="images/sun.svg" alt="sunshine" />
+          <h2>17°C</h2>
+          <h3>Sunny</h3>
+          <p>Humidity: 66%, Wind: 15km/h</p>
           <ul class="nav justify-content-evenly">
             <li class="nav-item">
               <p>Sun</p>
