--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" class="stylesheet" />
+    <title>Vanilla Weather App</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,15 +17,19 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Vanilla Weather App</title>
+    <link rel="stylesheet" href="src/style.css" class="stylesheet" />
   </head>
   <body>
     <div class="container">
       <div class="weather-app">
         <div class="weather-info">
           <h1>Auckland</h1>
-          <p>Sunday 16:00</p>
-          <img src="images/sun.svg" alt="sunshine" />
+          <p class="date">Sunday 16:00</p>
+          <img
+            src="images/sun.svg"
+            class="hero-image filter-white"
+            alt="sunshine"
+          />
           <h2>17°C</h2>
           <h3>Sunny</h3>
           <p>Humidity: 66%, Wind: 15km/h</p>
@@ -99,12 +104,10 @@
           </div>
         </form>
         <footer>
-          <p>
-            This project was coded by Caroline Pic and is
-            <a href="https://github.com/CPLennon/vanilla-weather-app"
-              >open-sourced on GitHub</a
-            >.
-          </p>
+          This project was coded by Caroline Pic and is
+          <a href="https://github.com/CPLennon/vanilla-weather-app"
+            >open-sourced on GitHub</a
+          >.
         </footer>
       </div>
     </div>
