Added temp unit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             class="hero-image filter-white"
             alt="sunshine"
           />
-          <h2>17°C</h2>
+          <h2>
+            <span class="current-temperature">17</span>
+            <span class="temp-unit">°C</span>
+          </h2>
           <h3>Sunny</h3>
           <p>Humidity: 66%, Wind: 15km/h</p>
           <ul class="nav justify-content-evenly">
