added weather data from API

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
             <span class="current-temperature" id="main-temp">17</span>
             <span class="temp-unit">°C</span>
           </h2>
-          <h3>Sunny</h3>
-          <p>Humidity: 66%, Wind: 15km/h</p>
+          <h3 id="weather-desc">Sunny</h3>
+          <p>
+            Humidity: <span id="humidity">66</span>%, Wind:
+            <span id="wind">15</span>km/h
+          </p>
           <ul class="nav justify-content-evenly">
             <li class="nav-item">
               <p>Sun</p>
