Changed API icons to local images

--- a/index.html
+++ b/index.html
@@ -24,21 +24,22 @@
     <div class="container">
       <div class="weather-app">
         <div class="weather-info">
-          <h1>Auckland</h1>
-          <p class="date">Sunday 16:00</p>
+          <h1 id="city"></h1>
+          <p class="date" id="date"></p>
           <img
             src="images/sun.svg"
             class="hero-image filter-white"
             alt="sunshine"
+            id="main-image"
           />
           <h2>
-            <span class="current-temperature" id="main-temp">17</span>
+            <span class="current-temperature" id="main-temp"></span>
             <span class="temp-unit">°C</span>
           </h2>
-          <h3 id="weather-desc">Sunny</h3>
+          <h3 id="weather-desc"></h3>
           <p>
-            Humidity: <span id="humidity">66</span>%, Wind:
-            <span id="wind">15</span>km/h
+            Humidity: <span id="humidity"></span>%, Wind:
+            <span id="wind"></span>km/h
           </p>
           <ul class="nav justify-content-evenly">
             <li class="nav-item">
