--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1 id="city"></h1>
           <p class="date" id="date"></p>
           <img
-            src="images/sun.svg"
+            src=""
             class="hero-image filter-white"
             alt="sunshine"
             id="main-image"
@@ -41,7 +41,9 @@
             Humidity: <span id="humidity"></span>%, Wind:
             <span id="wind"></span>km/h
           </p>
-          <ul class="nav justify-content-evenly">
+
+          <!--
+        <ul class="nav justify-content-evenly">
             <li class="nav-item">
               <p>Sun</p>
               <img
@@ -88,6 +90,7 @@
               <p class="week-temperature">14°</p>
             </li>
           </ul>
+           -->
         </div>
         <form>
           <div class="row">
@@ -99,6 +102,7 @@
                 aucomplete="off"
                 aria-label="City name"
                 aria-describedby="basic-addon2"
+                id="city-search"
               />
             </div>
             <div class="col-3">
