--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
           />
           <h2>
             <span class="current-temperature" id="main-temp"></span>
-            <span class="temp-unit">°C</span>
+            <span class="temp-unit"
+              ><a href="#" class="active" id="celsius">°C</a> |
+              <a href="#" id="fahrenheit">°F</a></span
+            >
           </h2>
           <h3 id="weather-desc"></h3>
           <p>
