Added forecast loop in JS

--- a/index.html
+++ b/index.html
@@ -44,16 +44,8 @@
             Humidity: <span id="humidity"></span>%, Wind:
             <span id="wind"></span>km/h
           </p>
-          <ul class="nav justify-content-evenly">
-            <li class="nav-item">
-              <p>Sun</p>
-              <img
-                src="images/cloud-sun.svg"
-                alt="cloud sun"
-                class="list-images filter-white"
-              />
-              <p class="week-temperature">14°</p>
-            </li>
+          <ul class="nav justify-content-evenly" id="forecast">
+            <!--
             <li class="nav-item">
               <p>Mon</p>
               <img
@@ -90,6 +82,7 @@
               />
               <p class="week-temperature">14°</p>
             </li>
+            -->
           </ul>
         </div>
         <form>
