Removed Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -34,56 +34,14 @@
           />
           <h2>
             <span class="current-temperature" id="main-temp"></span>
-            <span class="temp-unit"
-              ><a href="#" class="active" id="celsius">°C</a> |
-              <a href="#" id="fahrenheit">°F</a></span
-            >
+            <span class="temp-unit">°C</span>
           </h2>
           <h3 id="weather-desc"></h3>
           <p>
             Humidity: <span id="humidity"></span>%, Wind:
             <span id="wind"></span>km/h
           </p>
-          <ul class="nav justify-content-evenly" id="forecast">
-            <!--
-            <li class="nav-item">
-              <p>Mon</p>
-              <img
-                src="images/cloud.svg"
-                alt="cloud"
-                class="list-images filter-white"
-              />
-              <p class="week-temperature">14°</p>
-            </li>
-            <li class="nav-item">
-              <p>Tue</p>
-              <img
-                src="images/cloud-rain.svg"
-                alt="cloud rain"
-                class="list-images filter-white"
-              />
-              <p class="week-temperature">14°</p>
-            </li>
-            <li class="nav-item">
-              <p>Wed</p>
-              <img
-                src="images/cloud-lightning.svg"
-                alt="cloud lightning"
-                class="list-images filter-white"
-              />
-              <p class="week-temperature">14°</p>
-            </li>
-            <li class="nav-item">
-              <p>Thu</p>
-              <img
-                src="images/cloud-snow.svg"
-                alt="cloud snow"
-                class="list-images filter-white"
-              />
-              <p class="week-temperature">14°</p>
-            </li>
-            -->
-          </ul>
+          <ul class="nav justify-content-evenly" id="forecast"></ul>
         </div>
         <form>
           <div class="row">
